// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VDatePickerHeader.js should render component and match snapshot 1`] = `

<div class="date-picker-header">
  <button type="button"
          class="btn btn--icon"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_left
      </i>
    </div>
  </button>
  <div class="date-picker-header__value accent--text">
    <strong>
      November 2005
    </strong>
  </div>
  <button type="button"
          class="btn btn--icon"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_right
      </i>
    </div>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render component with default slot and match snapshot 1`] = `

<div class="date-picker-header">
  <button type="button"
          class="btn btn--icon"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_left
      </i>
    </div>
  </button>
  <div class="date-picker-header__value accent--text">
    <strong>
      <span>
        foo
      </span>
    </strong>
  </div>
  <button type="button"
          class="btn btn--icon"
          data-ripple="true"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_right
      </i>
    </div>
  </button>
</div>

`;

exports[`VDatePickerHeader.js should render readonly component and match snapshot 1`] = `

<div class="date-picker-header">
  <button disabled="disabled"
          type="button"
          class="btn btn--disabled btn--icon"
          data-ripple="false"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_left
      </i>
    </div>
  </button>
  <div class="date-picker-header__value date-picker-header__value--disabled">
    <strong>
      November 2005
    </strong>
  </div>
  <button disabled="disabled"
          type="button"
          class="btn btn--disabled btn--icon"
          data-ripple="false"
  >
    <div class="btn__content">
      <i aria-hidden="true"
         class="icon material-icons"
      >
        chevron_right
      </i>
    </div>
  </button>
</div>

`;
